Adjust layout issues from default bootstrap components

--- a/_scss/2-components/_contentlayout.scss
+++ b/_scss/2-components/_contentlayout.scss
@@ -4,3 +4,39 @@
   position: relative;
   background-color: $bgcolor;
 }
+
+.back-white {
+  background-color: $bgcolor;
+}
+
+.container {
+  margin: 0;
+  padding: 0;
+}
+
+
+.container-fluid {
+  margin: 0;
+  padding: 0;
+}
+
+.row {
+  margin: 0;
+  padding: 0;
+}
+
+.col-lg-4 {
+  margin: 0;
+  padding: 0;
+}
+
+.col-lg-2 {
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
